--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,25 +1,43 @@
 ---
-import "../styles/global.css"
+import "../styles/global.css";
 ---
 
-<html lang="en">
+<html lang="pl">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+		<title>
+			Codify – Nowoczesne strony i wizualizacje dla Twojego biznesu
+		</title>
+		<meta
+			name="description"
+			content="Projektujemy nowoczesne strony WWW, wizualizacje 3D i wirtualne spacery 360. Łączymy technologię z estetyką, pomagając firmom skutecznie i profesjonalnie zaistnieć online."
+		/>
+		<link rel="icon" type="image/svg+xml" href="/logo.svg" />
+		<link rel="apple-touch-icon" href="/logo.png" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
 			rel="stylesheet"
 		/>
+
+		<meta
+			property="og:title"
+			content="Codify – Nowoczesne strony i wizualizacje dla Twojego biznesu"
+		/>
+		<meta
+			property="og:description"
+			content="Projektujemy nowoczesne strony WWW, wizualizacje 3D i wirtualne spacery 360. Łączymy technologię z estetyką, pomagając firmom skutecznie i profesjonalnie zaistnieć online."
+		/>
+		<meta property="og:type" content="website" />
+		<meta property="og:image" content="https://codifystudio.pl/baner.png" />
+		<meta property="og:url" content="https://codifystudio.pl/" />
 		<meta name="generator" content={Astro.generator} />
-		<title>
-			Codify - Nowoczesne strony i wizualizacje dla Twojego biznesu
-		</title>
 	</head>
+
 	<body>
-		<h1>Astro</h1>
 		<slot />
 	</body>
 </html>
