--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,7 +15,7 @@ html {
 }
 
 body {
-    background-color: #FBFBFE;
+    background-color: #F2F2F2;
     margin: 0 auto;
     overflow-x: hidden;
 }
