--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,5 +1,5 @@
 ---
-
+import Logo from "../assets/icons/Codify-logo-ciemne.svg";
 ---
 
 <div
@@ -11,9 +11,9 @@
     >
         <a
             href="#home"
-            class="text-black md:text-white text-4xl md:text-5xl tracking-tighter hover:text-blue-300 transition-colors duration-300 ease"
+            class="text-black md:text-white text-4xl md:text-5xl tracking-tighter hover:text-[#e27952] transform transition-transform hover:rotate-[44deg] transition-colors duration-500 ease "
         >
-            CODIFY
+            <Logo width={60} height={60} fill="currentColor" />
         </a>
 
         <div class="md:flex md:gap-7 md:ml-5 md:items-center hidden">
@@ -21,7 +21,7 @@
                 (
                     <a
                         href="#home"
-                        class="text-white text-xl hover:text-blue-300 transition-colors duration-300 ease"
+                        class="text-white text-xl hover:text-[#e27952] transition-colors duration-300 ease"
                     >
                         Home
                     </a>
