--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,8 +6,8 @@
 }
 @theme {
   --font-sans: "Poppins", sans-serif;
-  --color-primary: #181a17;
-  --color-secondary: #FBFBFE;
+  --color-primary: #4B4B4B;
+  --color-secondary: #E7E7E7;
 }
 
 html {
