feat: add text animations and minor fixes

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -11,8 +11,7 @@ import Logo from "../assets/icons/Codify-logo-ciemne.svg";
     >
         <a
             href="#home"
-            class="text-black md:text-white text-4xl md:text-5xl tracking-tighter hover:text-[#e27952] transform transition-transform hover:rotate-[44deg] transition-colors duration-500 ease "
-        >
+            class="text-black md:text-white text-4xl md:text-5xl tracking-tighter hover:text-[#e27952] transform hover:rotate-[44deg] transition-all duration-500 ease-out">
             <Logo width={60} height={60} fill="currentColor" />
         </a>
 
@@ -21,7 +20,7 @@ import Logo from "../assets/icons/Codify-logo-ciemne.svg";
                 (
                     <a
                         href="#home"
-                        class="text-white text-xl hover:text-[#e27952] transition-colors duration-300 ease"
+                        class="text-white text-xl hover:text-[#e27952] transition-colors duration-500 ease"
                     >
                         Home
                     </a>
