--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,17 +5,17 @@ import Typewriter from "astro-typewriter";
 
 <section id={HERO.id}>
     <div
-        class="relative h-[100vh] flex items-center justify-center bg-[linear-gradient(180deg,rgba(38,40,52,1)_30%,rgba(0,0,0,1)_100%)]"
+        class="relative h-[100vh] flex items-center justify-center bg-[linear-gradient(180deg,rgba(38,40,52,1)_25%,rgba(0,0,0,1)_100%)]"
     >
         <div id="particles-js" class="absolute inset-0 z-0"></div>
-        <div>
+        <div data-aos="fade-up">
             <h1
-                class="text-9xl font-medium text-center leading-tight tracking-tight bg-gradient-to-b from-[#E7E7E7] to-[#4B4B4B] bg-clip-text text-transparent"
+                class="text-[5vw] font-medium text-center leading-tight tracking-tight bg-gradient-to-b from-[#E7E7E7] to-[#4B4B4B] bg-clip-text text-transparent"
             >
                 {HERO.h1}
             </h1>
             <h2
-                class="text-5xl text-center
+                class="text-[2vw] text-center
          bg-gradient-to-b from-[#E7E7E7] to-[#4B4B4B]
          bg-clip-text text-transparent"
             >
