--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,12 +12,21 @@ import { SITE } from "../content/site";
         <meta name="description" content={SITE.seo.description} />
         <link rel="icon" type="image/svg+xml" href={SITE.icons.favicon} />
         <link rel="apple-touch-icon" href={SITE.icons.appleTouch} />
+
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
             href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
             rel="stylesheet"
         />
+        <script>
+            import AOS from "aos";
+            import "aos/dist/aos.css";
+
+            document.addEventListener("DOMContentLoaded", () => {
+                AOS.init({ duration: 800, once: true });
+            });
+        </script>
 
         <meta property="og:title" content={SITE.seo.title} />
         <meta property="og:description" content={SITE.seo.description} />
