refactor(nav): make logo responsive and remove hardcoded colors

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,6 +8,7 @@
   --font-sans: "Poppins", sans-serif;
   --color-primary: #4B4B4B;
   --color-secondary: #E7E7E7;
+  --color-accent: #D95323
 }
 
 html {
