--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -11,8 +11,9 @@ import Logo from "../assets/icons/Codify-logo-ciemne.svg";
     >
         <a
             href="#home"
-            class="text-black md:text-white text-4xl md:text-5xl tracking-tighter hover:text-[#e27952] transform hover:rotate-[44deg] transition-all duration-500 ease-out">
-            <Logo width={60} height={60} fill="currentColor" />
+            class="text-black md:text-secondary text-4xl md:text-5xl tracking-tighter hover:text-accent transform hover:rotate-[44deg] transition-all duration-500 ease-out"
+        >
+            <Logo fill="currentColor" class="w-11 h-11 md:w-15 md:h-15" />
         </a>
 
         <div class="md:flex md:gap-7 md:ml-5 md:items-center hidden">
@@ -20,7 +21,7 @@ import Logo from "../assets/icons/Codify-logo-ciemne.svg";
                 (
                     <a
                         href="#home"
-                        class="text-white text-xl hover:text-[#e27952] transition-colors duration-500 ease"
+                        class="text-secondary text-xl font-medium hover:text-[#e27952] transition-colors duration-500 ease"
                     >
                         Home
                     </a>
