--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,5 +1,6 @@
 ---
 import Logo from "../assets/icons/Codify-logo-ciemne.svg";
+import Button from "./Button.astro";
 ---
 
 <div
@@ -7,7 +8,7 @@ import Logo from "../assets/icons/Codify-logo-ciemne.svg";
     class="fixed top-0 left-0 w-full md:h-[90px] md:bg-black/30 md:backdrop-blur-xl z-50 flex text-center h-[60px] bg-white backdrop-blur-0"
 >
     <div
-        class="w-full max-w-[1440px] mx-auto px-5 flex items-center justify-between gap-5"
+        class="w-full max-w-[2000px] mx-auto px-5 flex items-center justify-between gap-5"
     >
         <a
             href="#home"
@@ -27,6 +28,9 @@ import Logo from "../assets/icons/Codify-logo-ciemne.svg";
                     </a>
                 )
             }
+        </div>
+        <div class="hidden md:block">
+            <Button text="Kontakt" href="#contact" variant={"outlined"}/>
         </div>
     </div>
 </div>
