--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,7 +8,8 @@
   --font-sans: "Poppins", sans-serif;
   --color-primary: #4B4B4B;
   --color-secondary: #E7E7E7;
-  --color-accent: #D95323
+  --color-accent: #D96725;
+  --color-accent-hover: #D95323;
 }
 
 html {
