feat(nav): add burger button, menu items config and mobile menu toggle

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,6 +20,7 @@ import { SITE } from "../content/site";
             rel="stylesheet"
         />
         <script>
+            import "../scripts/menu.ts";
             import AOS from "aos";
             import "aos/dist/aos.css";
 
