--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -7,7 +7,7 @@ import Typewriter from "astro-typewriter";
     <div
         class="relative h-[100vh] flex items-center justify-center bg-[linear-gradient(180deg,rgba(38,40,52,1)_25%,rgba(0,0,0,1)_100%)]"
     >
-        <div id="particles-js" class="absolute inset-0 z-10"></div>
+        <div id="particles-js" class="absolute inset-0 z-0 pointer-events-none"></div>
         <div data-aos="fade-up" class="mx-2">
             <h1
                 class="text-[clamp(2.5rem,6vw,8rem)] font-medium text-center leading-tight tracking-tight bg-gradient-to-b from-secondary to-primary bg-clip-text text-transparent"
