feat(hero): add hero buttons and small UI tweaks

--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -4,7 +4,8 @@ import { cva, type VariantProps } from "class-variance-authority";
 const buttonStyles = cva(
   `
     px-5 py-2.5
-    text-[25px]
+    text-xl
+    sm:text-3xl
     rounded-[5px]
     text-center
     cursor-pointer
