--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -7,7 +7,7 @@ import { MENU, CTA } from "../content/menuItems";
 
 <div
     id="main-menu"
-    class="fixed top-0 left-0 w-full h-[60px] md:h-[90px]
+    class="fixed top-0 left-0 w-full h-15 md:h-22.5
          bg-white md:bg-black/30 backdrop-blur-0 md:backdrop-blur-xl
          z-50 flex text-center"
 >
@@ -16,7 +16,7 @@ import { MENU, CTA } from "../content/menuItems";
     >
         <a
             href="#home"
-            class="text-black md:text-secondary hover:text-accent transform hover:rotate-44 transition-all duration-500 ease-out"
+            class="text-primary md:text-secondary hover:text-accent transform hover:rotate-44 transition-all duration-500 ease-out"
             aria-label="Go to home"
         >
             <Logo fill="currentColor" class="w-11 h-11 md:w-15 md:h-15" />
