--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,7 +6,7 @@
 }
 @theme {
   --font-sans: "Poppins", sans-serif;
-  --color-primary: #4B4B4B;
+  --color-primary: #1F2226;
   --color-secondary: #E7E7E7;
   --color-accent: #D96725;
   --color-accent-hover: #D95323;
