--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,24 +1,33 @@
 ---
 import { HERO } from "../content/hero";
 import Typewriter from "astro-typewriter";
+import Button from "./Button.astro";
 ---
 
 <section id={HERO.id}>
     <div
-        class="relative h-[100vh] flex items-center justify-center bg-[linear-gradient(180deg,rgba(38,40,52,1)_25%,rgba(0,0,0,1)_100%)]"
+        class="relative h-screen flex items-center justify-center bg-[linear-gradient(180deg,rgba(38,40,52,1)_25%,rgba(0,0,0,1)_100%)] text-center"
     >
-        <div id="particles-js" class="absolute inset-0 z-0 pointer-events-none"></div>
+        <div id="particles-js" class="absolute inset-0 pointer-events-none">
+        </div>
         <div data-aos="fade-up" class="mx-2">
             <h1
-                class="text-[clamp(2.5rem,6vw,8rem)] font-medium text-center leading-tight tracking-tight bg-gradient-to-b from-secondary to-primary bg-clip-text text-transparent"
+                class="text-[clamp(2.5rem,6vw,8rem)] font-medium leading-tight tracking-tight bg-linear-to-r from-secondary from-0% via-secondary via-50% to-primary to-100% bg-clip-text text-transparent"
             >
                 {HERO.h1}
             </h1>
             <h2
-                class="text-[clamp(1.25rem,3vw,3rem)] text-center bg-gradient-to-b from-secondary to-primary bg-clip-text text-transparent"
+                class="text-[clamp(1.25rem,3vw,3rem)] bg-linear-to-b from-secondary to-primary bg-clip-text text-transparent"
             >
                 <Typewriter messages={HERO.h2} class="tw" />
             </h2>
+            <div class="mt-10 flex gap-3 sm:gap-10 justify-center">
+                <Button href={HERO.button.href} text={HERO.button.label} />
+                <Button
+                    href={HERO.buttonOffer.href}
+                    text={HERO.buttonOffer.label}
+                />
+            </div>
         </div>
     </div>
 </section>
@@ -33,7 +42,7 @@ import Typewriter from "astro-typewriter";
     is:inline
     src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"
 ></script>
-<script client:load>
+<script>
     window.particlesJS?.("particles-js", {
         particles: {
             number: { value: 80, density: { enable: true, value_area: 800 } },
@@ -51,6 +60,7 @@ import Typewriter from "astro-typewriter";
             },
         },
         interactivity: {
+            detect_on: "window",
             events: {
                 onhover: { enable: true, mode: "repulse" },
                 onclick: { enable: true, mode: "repulse" },
