--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -16,10 +16,15 @@ import { MENU, CTA } from "../content/menuItems";
     >
         <a
             href="#home"
-            class="text-primary md:text-secondary hover:text-accent transform hover:rotate-44 transition-all duration-500 ease-out"
+            class="flex flex-col gap-1.5 items-center group text-primary md:text-secondary hover:text-accent transform hover:rotate-44 transition-all duration-500 ease-out"
             aria-label="Go to home"
         >
-            <Logo fill="currentColor" class="w-11 h-11 md:w-15 md:h-15" />
+            <Logo fill="currentColor" class="w-11 h-11 md:w-13 md:h-13 md:group-hover:translate-y-3 md:group-hover:scale-[1.3] transition-all duration-500" />
+            <p
+                class="hidden leading-none md:block md:group-hover:opacity-0 md:group-hover:scale-95 transition-all duration-300"
+            >
+                CODIFY
+            </p>
         </a>
 
         <div class="hidden md:flex md:gap-7 md:ml-5 md:items-center">
