--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,7 +17,7 @@ html {
 }
 
 body {
-    background-color: #F2F2F2;
+    background-color: #E7E7E7;
     margin: 0 auto;
     overflow-x: hidden;
 }
