fix(particles): allow hover interaction without blocking button clicks

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -7,7 +7,7 @@ import image from "../assets/images/about.jpg";
 
 <section id="about">
     <div
-        class="grid grid-cols-1 gap-4 lg:grid-cols-2 lg:gap-18 items-center justify-center m-auto my-5 md:my-15 md:pb-5 pb-10 px-5 lg:px-15 max-w-[1440px]"
+        class="grid grid-cols-1 gap-4 lg:grid-cols-2 lg:gap-18 items-center justify-center m-auto my-5 md:my-15 md:pb-5 pb-10 px-5 lg:px-15 max-w-360"
     >
         <div class="text-white">
             <ContentHeader text="O nas" />
