--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -12,7 +12,7 @@ import { MENU, CTA } from "../content/menuItems";
          z-50 flex text-center"
 >
     <div
-        class="w-full max-w-screen-2xl mx-auto px-5 flex items-center justify-between gap-5"
+        class="w-full max-w-360 mx-auto px-5 flex items-center justify-between gap-5"
     >
         <a
             href="#home"
