feat(about): add content and About component

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,7 +6,7 @@ import Button from "./Button.astro";
 
 <section id={HERO.id}>
     <div
-        class="relative flex flex-col h-screen flex items-center justify-center bg-[linear-gradient(180deg,rgba(38,40,52,1)_25%,rgba(0,0,0,1)_100%)] text-center"
+        class="relative flex-col h-screen flex items-center justify-center bg-[linear-gradient(180deg,rgba(38,40,52,1)_25%,rgba(0,0,0,1)_100%)] text-center"
     >
         <div id="particles-js" class="absolute inset-0 z-10"></div>
         <div data-aos="fade-up" class="mx-2">
