--- a/src/components/ContentHeader.astro
+++ b/src/components/ContentHeader.astro
@@ -2,6 +2,6 @@
 const {text} = Astro.props;
 ---
 
-<h2 class="text-center text-primary text-4xl md:text-5xl xl:text-6xl font-semibold m-4">
+<h2 class="text-center text-primary leading-tight text-5xl md:text-6xl xl:text-8xl font-bold my-5 md:my-15">
 {text}
 </h2>
