--- a/src/components/BurgerButton.astro
+++ b/src/components/BurgerButton.astro
@@ -4,19 +4,19 @@
     aria-expanded="false"
 >
     <span
-        class="absolute left-1/2 top-1/2 w-6 h-0.5 bg-black rounded transition-all duration-300 ease-in-out
+        class="absolute left-1/2 top-1/2 w-6 h-0.5 bg-secondary rounded transition-all duration-300 ease-in-out
                -translate-x-1/2 -translate-y-2.5
                group-[.open]:translate-y-0 group-[.open]:rotate-45"
     ></span>
 
     <span
-        class="absolute left-1/2 top-1/2 w-6 h-0.5 bg-black rounded transition-all duration-300 ease-in-out
+        class="absolute left-1/2 top-1/2 w-6 h-0.5 bg-secondary rounded transition-all duration-300 ease-in-out
                -translate-x-1/2 translate-y-0
                group-[.open]:opacity-0"
     ></span>
     
     <span
-        class="absolute left-1/2 top-1/2 w-6 h-0.5 bg-black rounded transition-all duration-300 ease-in-out
+        class="absolute left-1/2 top-1/2 w-6 h-0.5 bg-secondary rounded transition-all duration-300 ease-in-out
                -translate-x-1/2 translate-y-2.5
                group-[.open]:translate-y-0 group-[.open]:-rotate-45"
     ></span>
