--- a/src/components/MobileMenu.astro
+++ b/src/components/MobileMenu.astro
@@ -4,18 +4,21 @@ import { MENU, CTA } from "../content/menuItems";
 
 <div
     id="mobile-menu"
-    class="hidden fixed top-15 w-full flex-col bg-white px-6 py-1 gap-4
-         md:hidden z-50 justify-items-center"
+    class="hidden fixed top-15 w-full flex-col bg-primary-lighter px-6 py-2 gap-2
+         md:hidden z-50 justify-items-center items-center"
 >
     {
         MENU.map((item) => (
-            <a href={item.href} class="block py-1 text-xl font-medium">
+            <a
+                href={item.href}
+                class="text-secondary block py-1 text-xl font-medium"
+            >
                 {item.label}
             </a>
         ))
     }
 
-    <a href={CTA.href} class="block py-1 text-xl font-medium">
+    <a href={CTA.href} class="text-secondary block py-1 text-xl font-medium">
         {CTA.label}
     </a>
 </div>
