--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -8,7 +8,7 @@ import { MENU, CTA } from "../content/menuItems";
 <div
     id="main-menu"
     class="fixed top-0 left-0 w-full h-15 md:h-22.5
-         bg-white md:bg-black/30 backdrop-blur-0 md:backdrop-blur-xl
+         bg-primary-lighter md:bg-black/30 backdrop-blur-0 md:backdrop-blur-xl
          z-50 flex text-center"
 >
     <div
@@ -16,7 +16,7 @@ import { MENU, CTA } from "../content/menuItems";
     >
         <a
             href="#home"
-            class="flex flex-col gap-1.5 items-center group text-primary md:text-secondary hover:text-accent transform hover:rotate-44 transition-all duration-500 ease-out"
+            class="flex flex-col gap-1.5 items-center group text-secondary md:text-secondary hover:text-accent transform hover:rotate-44 transition-all duration-500 ease-out"
             aria-label="Go to home"
         >
             <Logo fill="currentColor" class="w-11 h-11 md:w-13 md:h-13 md:group-hover:translate-y-3 md:group-hover:scale-[1.3] transition-all duration-500" />
