feat: add Services section and Cards component

--- a/src/components/ContentHeader.astro
+++ b/src/components/ContentHeader.astro
@@ -3,7 +3,7 @@ const { text } = Astro.props;
 ---
 
 <h2
-    class="text-center bg-linear-to-b from-primary to-accent bg-clip-text text-transparent text-[clamp(2.3rem,4.5vw,7rem)] leading-tight font-bold my-5 md:my-15"
+    class="text-center bg-linear-to-b from-primary to-gray-600 bg-clip-text text-transparent text-[clamp(2.3rem,4.5vw,7rem)] leading-tight font-bold my-5 md:my-15"
 >
     {text}
 </h2>
