--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import About from "../components/About.astro";
 import Hero from "../components/Hero.astro";
+import Services from "../components/Services.astro";
 import Layout from "../layouts/Layout.astro";
 import "../styles/global.css";
 ---
@@ -8,4 +9,5 @@ import "../styles/global.css";
 <Layout>
     <Hero />
     <About />
+    <Services />
 </Layout>
