--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -7,7 +7,7 @@ import image from "../assets/images/about.jpg";
 import { ABOUT } from "../content/about";
 ---
 
-<section id={ABOUT.id}>
+<section id={ABOUT.id} class="scroll-mt-15 md:scroll-mt-22.5">
     <div
         class="max-w-360 items-center justify-center m-auto my-5 md:my-15 px-5 lg:px-0"
     >
