--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -3,7 +3,7 @@ import Card from "./Card.astro";
 import ContentSubHeader from "./ContentSubHeader.astro";
 ---
 
-<section>
+<section id="services" class="scroll-mt-15 md:scroll-mt-22.5">
     <div
         class="max-w-360 flex flex-col items-center justify-center m-auto my-5 md:my-15 px-5 lg:px-0"
     >
