feat: add animations to components

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -22,6 +22,7 @@ import Button from "./Button.astro";
             </h2>
         </div>
         <div
+            data-aos="fade-up"
             class="relative z-20 mt-3 md:mt-10 flex gap-3 sm:gap-10 justify-center"
         >
             <Button href={HERO.button.href} text={HERO.button.label} />
