--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -11,11 +11,13 @@ import { ABOUT } from "../content/about";
     <div
         class="max-w-360 items-center justify-center m-auto my-5 md:my-15 px-5 lg:px-0"
     >
-        <ContentHeader text={ABOUT.header} />
+        <div data-aos="fade-up">
+            <ContentHeader text={ABOUT.header} />
+        </div>
         <div
             class="grid grid-cols-1 gap-4 lg:grid-cols-2 lg:gap-18 lg:px-15 items-center justify-center"
         >
-            <div>
+            <div data-aos="fade-up">
                 <ContentSubHeader text={ABOUT.subHeader} />
 
                 <div
@@ -36,7 +38,7 @@ import { ABOUT } from "../content/about";
                 }
             </div>
 
-            <div>
+            <div data-aos="fade-up">
                 <Picture
                     src={image}
                     alt="about"
