--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -5,6 +5,7 @@ import ContentSubHeader from "./ContentSubHeader.astro";
 
 <section id="services" class="scroll-mt-15 md:scroll-mt-22.5">
     <div
+        data-aos="fade-up"
         class="max-w-360 flex flex-col items-center justify-center m-auto my-5 md:my-15 px-5 lg:px-0"
     >
         <ContentSubHeader text="Nasze usługi" />
