refactor: redesign services section and optimize images

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -4,7 +4,7 @@ import { SERVICES } from "../content/services";
 
 <div
     data-aos="fade-up"
-    class=" py-5 md:py-15 grid grid-cols-1 gap-4 lg:grid-cols-3 lg:gap-10 lg:px-15 justify-center"
+    class="py-5 md:py-15 grid grid-cols-1 gap-4 lg:grid-cols-3 lg:gap-10 lg:px-15 justify-center"
 >
     {
         SERVICES.map((service) => {
@@ -12,7 +12,10 @@ import { SERVICES } from "../content/services";
 
             return (
                 <a href={service.href} class="block">
-                    <div class="group relative overflow-hidden text-primary flex flex-col gap-7 bg-white py-15 px-10 transition-all duration-300 hover:text-secondary group-active:text-seconda  h-full">
+                    <div
+                        class="group relative overflow-hidden text-primary flex flex-col gap-7 bg-white py-15 px-10 transition-all duration-300 hover:text-secondary group-active:text-seconda  hover:scale-[1.03]
+            active:scale-[0.98] h-full"
+                    >
                         <div
                             class="absolute inset-0 bg-cover bg-center opacity-0 transition-opacity duration-300 group-hover:opacity-100 group-active:opacity-100"
                             style={`background-image: url('${service.bgImage.src}');`}
