feat(services): improve mobile responsiveness

--- a/src/components/ContentHeader.astro
+++ b/src/components/ContentHeader.astro
@@ -3,7 +3,7 @@ const { text } = Astro.props;
 ---
 
 <h2
-    class="text-center text-primary text-2xl font-semibold"
+    class="text-center text-primary text-lg md:text-2xl font-semibold"
 >
     {text}
 </h2>
