--- a/src/components/ContentDescription.astro
+++ b/src/components/ContentDescription.astro
@@ -2,6 +2,6 @@
 const { text, class: className = "" } = Astro.props;
 ---
 
-<p class={`text-2xl leading-tight ${className}`}>
+<p class={`text-lg md:text-2xl leading-tight ${className}`}>
     {text}
 </p>
