--- a/src/components/ContentSubHeader.astro
+++ b/src/components/ContentSubHeader.astro
@@ -3,7 +3,7 @@ const { text } = Astro.props;
 ---
 
 <h3
-    class="text-center bg-linear-to-b from-primary to-gray-600 bg-clip-text text-transparent text-5xl leading-tight font-bold m-5"
+    class="text-center bg-linear-to-b from-primary to-gray-600 bg-clip-text text-transparent text-4xl md:text-5xl leading-tight font-bold m-5"
 >
     {text}
 </h3>
