style(button): update button appearance

--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -6,7 +6,7 @@ const buttonStyles = cva(
     px-5 py-2.5
     text-xl
     sm:text-3xl
-    rounded-[5px]
+    rounded-[8px]
     text-center
     cursor-pointer
     self-start
@@ -27,7 +27,7 @@ const buttonStyles = cva(
         `,
         outlined: `
           bg-transparent
-          border-secondary
+          border-gray-600
           text-secondary
           hover:bg-accent
           hover:border-accent
