--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -6,7 +6,7 @@ const buttonStyles = cva(
     px-5 py-2.5
     text-xl
     sm:text-3xl
-    rounded-[8px]
+    rounded-lg
     text-center
     cursor-pointer
     self-start
