--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -23,7 +23,7 @@ import Button from "./Button.astro";
         </div>
         <div
             data-aos="fade-up"
-            class="relative z-20 mt-3 md:mt-10 flex gap-3 sm:gap-10 justify-center"
+            class="relative z-20 mt-3 md:mt-10 grid grid-cols-2 gap-3 sm:gap-10 justify-center"
         >
             <Button href={HERO.button.href} text={HERO.button.label} />
             <Button
