--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,6 +11,7 @@
   --color-accent: #D96725;
   --color-accent-hover: #D95323;
   --color-primary-lighter: #2C3540;
+  --color-dark: #0D0D0D;
 }
 
 html {
