--- a/src/components/MobileMenu.astro
+++ b/src/components/MobileMenu.astro
@@ -4,8 +4,7 @@ import { MENU, CTA } from "../content/menuItems";
 
 <div
     id="mobile-menu"
-    class="hidden fixed top-15 w-full flex-col bg-primary-lighter px-6 py-2 gap-2
-         md:hidden z-50 justify-items-center items-center"
+    class="fixed top-15 left-0 w-full flex flex-col items-center bg-primary px-6 gap-4 md:hidden z-60 overflow-hidden max-h-0 transition-all duration-300 ease-in-out"
 >
     {
         MENU.map((item) => (
