--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -8,7 +8,7 @@ import { MENU, CTA } from "../content/menuItems";
 <div
     id="main-menu"
     class="fixed top-0 left-0 w-full h-15 md:h-22.5
-         bg-primary-lighter md:bg-black/30 backdrop-blur-0 md:backdrop-blur-xl
+         bg-primary md:bg-black/30 backdrop-blur-0 md:backdrop-blur-xl
          z-50 flex text-center"
 >
     <div
