--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -11,12 +11,12 @@ import Button from "./Button.astro";
         <div id="particles-js" class="absolute inset-0 z-10"></div>
         <div data-aos="fade-up" class="mx-2">
             <h1
-                class="text-[clamp(2.5rem,6vw,8rem)] font-medium leading-tight tracking-tight bg-linear-to-r from-secondary from-0% via-secondary via-50% to-primary to-100% bg-clip-text text-transparent"
+                class="text-[clamp(2.5rem,6vw,8rem)] font-medium leading-tight tracking-tight bg-linear-to-r from-primary from-0% via-secondary via-50% to-primary to-100% bg-clip-text text-transparent"
             >
                 {HERO.h1}
             </h1>
             <h2
-                class="text-[clamp(1.25rem,3vw,3rem)] bg-linear-to-b from-secondary to-primary bg-clip-text text-transparent my-2"
+                class="text-[clamp(1.25rem,3vw,3rem)] bg-linear-to-b from-dark from-0% via-secondary via-50% to-dark to-100% bg-clip-text text-transparent my-2"
             >
                 <Typewriter messages={HERO.h2} class="tw" />
             </h2>
