--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -27,7 +27,7 @@ const buttonStyles = cva(
         `,
         outlined: `
           bg-transparent
-          border-gray-600
+          border-secondary/40
           text-secondary
           hover:bg-accent
           hover:border-accent
